--- a/hurricane.kv
+++ b/hurricane.kv
@@ -5,8 +5,6 @@
         text: "Godina 2005. je imala najaktivniju sezonu uragana ikada zabeleženu u Atlantskom okeanu. Od 27 oluja, rekordnih 15 je dobilo status uragana, a čak njih 4 je dostiglo kategoriju 5, što je najviši rang na skali. \nOluje su izazvale skoro 4000 smrtnih ishoda i materijalnu štetu od 171 milijardi dolara. \nOvde su date animacije za 5 najjačih uragana te godine. \n\nIzaberi uragan!"
         font_size: 20
         text_size: self.width,None
-        size_hint: 1, None
-        height: self.texture_size[1]
         padding_x:50
         padding_y:130
         halign: 'center'
@@ -69,4 +67,5 @@
         orientation: 'vertical'
         Button:
             text: "Pokreni aplikaciju"
+            font_size: 20
             on_press: root.pokreni()
