--- a/hurricane.kv
+++ b/hurricane.kv
@@ -1,16 +1,30 @@
 <kvBl>
+
     orientation: 'horizontal'
-    
+    canvas:
+        Rectangle:
+            source: 'hurricane.jpg'
+            size: self.size
+            pos: self.pos
     Label:
         text: "Godina 2005. je imala najaktivniju sezonu uragana ikada zabeleženu u Atlantskom okeanu. Od 27 oluja, rekordnih 15 je dobilo status uragana, a čak njih 4 je dostiglo kategoriju 5, što je najviši rang na skali. \nOluje su izazvale skoro 4000 smrtnih ishoda i materijalnu štetu od 171 milijardi dolara. \nOvde su date animacije za 5 najjačih uragana te godine. \n\nIzaberi uragan!"
+        bold:True
         font_size: 20
         text_size: self.width,None
         padding_x:50
-        padding_y:130
+       #padding_y:150
         halign: 'center'
+        color:0,0.1,0.2,0.8
 
     BoxLayout:
         orientation: 'vertical'
+        size_hint:0.7,1
+   #     canvas:
+    #        Color: 
+     #           rgba:(1,1,1,0.1)
+      #      Rectangle:
+       #         size: self.size
+        #        pos: self.pos
         
         #Wilma
         BoxLayout:
@@ -18,54 +32,85 @@
             
             Label:
                 text: "Wilma"
+                bold:True
                 font_size: 20
+                color:(0.0,0.5,0.7,1)
             CheckBox: 
                 on_active:root.setfilename("wilma.csv")
                 group: "grupa"
+                color:[0,0,0,1]
         #Rita
         BoxLayout:
             orientation: 'horizontal'
-            
+
             Label:
                 text: "Rita"
+                bold:True
                 font_size: 20
+                color:(0.0,0.5,0.7,1)
             CheckBox: 
                 on_active:root.setfilename("rita.csv")
                 group: "grupa"
+                color:[0,0,0,1]
         #Dennis
         BoxLayout:
             orientation: 'horizontal'
             
             Label:
                 text: "Dennis"
+                bold:True
                 font_size: 20
+                color:(0.0,0.5,0.7,1)
             CheckBox: 
                 on_active:root.setfilename("dennis.csv")
                 group: "grupa"
+                color:[0,0,0,1]
          #Katrina
         BoxLayout:
             orientation: 'horizontal'
             
             Label:
                 text: "Katrina"
+                bold:True
                 font_size: 20
+                color:(0.0,0.5,0.7,1)
             CheckBox: 
                 on_active:root.setfilename("katrina.csv")
                 group: "grupa"
+                color:[0,0,0,1]
         #Emily
         BoxLayout:
             orientation: 'horizontal'
             
             Label:
                 text: "Emily"
+                bold:True
                 font_size: 20
+                color:(0.0,0.5,0.7,1)
             CheckBox: 
                 on_active:root.setfilename("emily.csv")
                 group: "grupa"
+                color:[0,0,0,1]
                 
     BoxLayout:
         orientation: 'vertical'
+        size_hint:0.5,0.6
+
+
         Button:
-            text: "Pokreni aplikaciju"
+            text: "Pokreni aplikaciju!"
+            color:(0.0,0.5,0.7,1)
+            bold:True
             font_size: 20
             on_press: root.pokreni()
+            background_normal:''
+            background_color:1,1,1,0.5
+            canvas:
+                Color:
+                    rgba: 0, .4, .6, 0.8
+                Line:
+                    width: 2
+                    rectangle: self.x, self.y, self.width, self.height
+        BoxLayout:
+        BoxLayout:
+            
